tests/cases/modules/ok/trait-project-main.ari
mod trait_project;

fn main() -> i64 {
  return trait_project::run();
}
