tests/cases/modules/errors/self-import-main.ari
mod self_import;

fn main() -> i64 {
  return 0;
}
